--- a/main/index.html
+++ b/main/index.html
@@ -50,7 +50,18 @@
                           </div>
                         </div>
                       </div>
+                    <div class="card-body"></div>
                 </div>
+            </div>
+            <div class="col-xl-5 col-lg-5">
+              <div class="card shadow mb-4">
+                  <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                      <h6 class="m-0 font-weight-bold text-primary">Finance Report</h6>
+                  </div>
+                  <div class="card-body">
+                    
+                  </div>
+              </div>
             </div>
         </div>
     </div>
